refactor: code