@@ -1,4 +1,4 @@
-package com.example.movie_backend.services;
+package com.example.movie_backend.service.impl;
 
 
 import com.example.movie_backend.controller.exception.BadRequestException;
@@ -7,14 +7,12 @@ import com.example.movie_backend.dto.category.CategoryDTO;
 import com.example.movie_backend.dto.category.CategoryMapper;
 import com.example.movie_backend.entity.Category;
 import com.example.movie_backend.repository.CategoryRepository;
-import com.example.movie_backend.repository.MovieRepository;
-import com.example.movie_backend.services.interfaces.ICategoryService;
+import com.example.movie_backend.service.ICategoryService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,7 +20,6 @@ public class CategoryService implements ICategoryService {
 
     public final CategoryMapper mapper;
     public final CategoryRepository repository;
-    public final MovieRepository movieRepository;
 
     @Override
     @Transactional
@@ -42,17 +39,17 @@ public class CategoryService implements ICategoryService {
     public CategoryDTO getById(Long id) {
 
         return this.repository.findById(id)
-            .map(this.mapper::toDTO)
-            .orElseThrow(
-                () -> new BadRequestException("Movie not found")
-            );
+                .map(this.mapper::toDTO)
+                .orElseThrow(
+                        () -> new BadRequestException("Movie not found")
+                );
     }
 
     @Override
     public List<CategoryDTO> getList(GetCategoriesFilter filter) {
         return repository.filterCategory(filter.getSearchTerm(), filter.getExcludeIds()).stream()
-            .map(mapper::toDTO)
-            .collect(Collectors.toList());
+                .map(mapper::toDTO)
+                .toList();
     }
 
     @Override
